# archivediver

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  requirements.txt
.cursor/rules/: archivediver.mdc
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/archivediver_api/: agent.py  main.py  models.py
apps/api/tests/: test_exhibit_mocked.py  test_live.py
apps/mcp-smithsonian/: Dockerfile  README.md  pyproject.toml
apps/mcp-smithsonian/src/mcp_smithsonian/: client.py  models.py  normalizer.py  server.py
apps/mcp-smithsonian/tests/: test_live.py  test_normalizer.py  test_tool.py
apps/mcp-smithsonian/tests/fixtures/: __init__.py
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/assets/: README.md
apps/web/src/: App.test.tsx  App.tsx  api.ts  copy.ts  exhibitUtils.ts  mockExhibit.ts  styles.css  types.ts  useExhibitRequest.ts
apps/web/src/components/: ArtifactCard.tsx  DevDetails.tsx  ExhibitForm.tsx  ExhibitPanel.tsx  FeaturedArtifactCard.tsx  ResultNotice.tsx  SiteHeader.tsx  TimelinePanel.tsx
apps/web/src/test/: setup.ts
docs/: api-contract.md  deployment.md  frontend-contract.md  handoff.md  implementation-brief.md  known-limitations.md  project-brief.md  prompt-log.md  smithsonian-data-notes.md
