[project]
name = "archivediver-api"
version = "0.1.0"
description = "FastAPI backend for ArchiveDiver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-anthropic>=0.3.0,<0.4.0",
  "langchain-mcp-adapters>=0.1.14,<0.2.0",
  "anthropic>=0.40.0,<1.0.0",
  "httpx>=0.27.2,<1.0.0",
  "pydantic>=2.9.2,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.27.2,<1.0.0",
  "ruff>=0.6.9,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
