[project]
name = "mcp-smithsonian"
version = "0.1.0"
description = "MCP server for Smithsonian Open Access integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.2,<1.0.0",
  "pydantic>=2.9.2,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "ruff>=0.6.9,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
